--- a/templates/campaign/_form.html.twig
+++ b/templates/campaign/_form.html.twig
@@ -1,4 +1,5 @@
 {{ form_start(form) }}
     {{ form_widget(form) }}
+    <a href="{{ path('customer_new') }}">Pas dans la liste ? Créer le client !</a><br>
     <button class="btn">{{ button_label|default('Save') }}</button>
 {{ form_end(form) }}
