--- a/templates/campaign/edit.html.twig
+++ b/templates/campaign/edit.html.twig
@@ -7,6 +7,18 @@
 
     {{ include('campaign/_form.html.twig', {'button_label': 'Update'}) }}
 
+    <div>Candidats présentés :</div>
+    {% for cc in campaign.campaignCandidate %}
+        {{ cc.candidate.firstname ~ ' ' ~ cc.candidate.lastname }} / {{ cc.candidate.jobTitle }}
+    {% endfor %}
+
+    <div>Candidats retenus :</div>
+    {% for cc in campaign.campaignCandidate %}
+        {% if cc.validByCustomer %}
+            {{ cc.candidate.firstname ~ ' ' ~ cc.candidate.lastname }} / {{ cc.candidate.jobTitle }}
+        {% endif %}
+    {% endfor %}
+
     <a href="{{ path('campaign_index') }}">back to list</a>
 
     {{ include('campaign/_delete_form.html.twig') }}
