--- a/templates/front/home.html.twig
+++ b/templates/front/home.html.twig
@@ -7,9 +7,9 @@
                 <div class="caption">
                     <div class="container">
                         <div class="col-md-6 col-sm-12">
-                            <h1>Distance Learning Education Center</h1>
-                            <h3>Our online courses are designed to fit in your industry supporting all-round with latest technologies.</h3>
-                            <a href="#feature" class="section-btn btn btn-default smoothScroll">Discover more</a>
+                            <h1>Vous êtes une entreprise en développement ?</h1>
+                            <h3>Vous avez des projets de développement ? Nous vous accompagnons dans votre développement et vous accompagnons tout au long de ce processus pour optimiser vos ressources humaines. Nous mettons tout en oeuvre afin que vous ayez des talents compétents et motivés continuellement.</h3>
+                            {#<a href="#feature" class="section-btn btn btn-default smoothScroll">Discover more</a>#}
                         </div>
                     </div>
                 </div>
@@ -19,15 +19,15 @@
                 <div class="caption">
                     <div class="container">
                         <div class="col-md-6 col-sm-12">
-                            <h1>Start your journey with our practical courses</h1>
-                            <h3>Our online courses are built in partnership with technology leaders and are designed to meet industry demands.</h3>
-                            <a href="#courses" class="section-btn btn btn-default smoothScroll">Take a course</a>
+                            <h1>Human talent consulting</h1>
+                            <h3>Nous vous accompagnons dans vos projets RH. Avec Human Talent, externalisez vos missions de développement et de gestion RH. Avec nous, recrutez, gardez et développez les meilleurs talents.</h3>
+                            {#<a href="#courses" class="section-btn btn btn-default smoothScroll">Take a course</a>#}
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="item item-third">
+            {#<div class="item item-third">
                 <div class="caption">
                     <div class="container">
                         <div class="col-md-6 col-sm-12">
@@ -37,7 +37,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>#}
         </div>
     </div>
 </section>
