--- a/templates/front/menu.html.twig
+++ b/templates/front/menu.html.twig
@@ -10,24 +10,33 @@
             </button>
 
             <!-- lOGO TEXT HERE -->
-            <a href="{{ path('front_index') }}" class="navbar-brand">HTC</a>
+            <a href="{{ path('front_index') }}" class="navbar-brand" id="logo"></a>
         </div>
 
         <!-- MENU LINKS -->
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="tel:"><i class="fal fa-phone"></i> +261 34 89 263 42</a></li>
+                <li>
+                    <a href="#"><i class="fa fa-facebook"></i></a>
+                </li>
+                <li>
+                    <a href="#"><i class="fa fa-linkedin"></i></a>
+                </li>
+                <li>
+                    <a href="#"><i class="fa fa-phone"></i></a>
+                </li>
             </ul>
 
             <ul class="nav navbar-nav navbar-nav-first navbar-right">
                 <li><a href="#top" class="smoothScroll">Accueil</a></li>
-                <li><a href="#about" class="smoothScroll">Nos prestations</a></li>
-                <li><a href="#team" class="smoothScroll">Déposez mon CV</a></li>
-                <li><a href="#depose_cv" class="smoothScroll">Offre d'emploi</a></li>
-                <li><a href="#courses" class="smoothScroll">Publications</a></li>
-                <li><a href="#testimonial" class="smoothScroll">Temoignages</a></li>
+                <li><a href="#what-we-do" class="smoothScroll">Nos prestations</a></li>
+                <li><a href="#depose-cv" class="smoothScroll">Déposez mon CV</a></li>
+                <li><a href="#job-list" class="smoothScroll">Offre d'emploi</a></li>
+                <li><a href="#posts" class="smoothScroll">Publications</a></li>
+                {#<li><a href="#testimonial" class="smoothScroll">Temoignages</a></li>#}
                 <li><a href="#contact" class="smoothScroll">Contact</a></li>
             </ul>
+
         </div>
 
     </div>
