--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,6 +15,8 @@
         {% block body %}{% endblock %}
 
         {{ encore_entry_script_tags('app') }}
+        {#<script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
+        <script src="{{ path('fos_js_routing_js', { callback: 'fos.Router.setData' }) }}"></script>#}
         {% block javascripts %}{% endblock %}
     </body>
 </html>
